# Pet_Planters

./: README.md  package-lock.json
backend/: README.md  all.sh  all_zero_copy.sh  chat.db
backend/-adminService/: README.md  main.py  requirements.txt  start.sh
backend/-authService/: Dockerfile  README.md  auth.db  main.py  requirements.txt  start.sh
backend/-authService/api/: auth.py  database.py  database_setup.py  getEnv.py  health.py  login.py  signUp.py  users.py
backend/-generateService/: README.md  chat.db  main.py  requirements.txt  start.sh  test_upload.py
backend/-generateService/api/: auth.py  getEnv.py  health.py  image_handler.py
backend/-generateService/uploads/: .gitignore
backend/-generateService/zcasgi/: Cargo.toml  README.md
backend/-generateService/zcasgi/src/: lib.rs
frontend/: .gitignore  dist  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css  themes.js
frontend/components/: GridBackground.vue
frontend/components/Buttons/: AnimatedBurger.vue  HeartButtonTwo.vue  RetroGradient.vue  SlideButton.vue
frontend/components/Cards/: BentoGrid.vue  ReflectionTitltPhone.vue  ScrollCards.vue
frontend/components/FontFx/: BigText.vue
frontend/components/MerchItems/: MerchCheckout.vue  MerchDetails.vue  (+3 more)
frontend/composables/: CursorAnimations.js  TextAnimations.js  useUnderlineAnimation.js
frontend/layouts/: default.vue  public.vue
frontend/pages/: about.vue  contact.vue  index.vue  merch.vue  services.vue
frontend/plugins/: gsap.js  smoothScroller.js  splitting.client.js  underline.client.js
(+48 files in other folders)
