# This is the configuration file for our Rust project, called a "Cargo manifest".
# It tells the Rust compiler, `cargo`, what our project is, what it depends on,
# and how to build it.

[package]
name = "zcasgi"
version = "0.1.0"
edition = "2021"

# This [lib] section is the most important part for Python integration.
# It tells Rust to compile our code into a "C-style dynamic library",
# which is a format that Python can understand and import like a regular module.
[lib]
name = "zcasgi"
crate-type = ["cdylib"]

# This [dependencies] section lists the external Rust libraries (called "crates")
# that our project needs to function.
[dependencies]
# `pyo3` is the magic that makes communication between Rust and Python seamless.
pyo3 = { version = "0.21.2", features = ["extension-module"] }

# `tokio` is a high-performance, asynchronous runtime for Rust.
tokio = { version = "1", features = ["full"] }

# `hyper` is a fast and correct HTTP implementation for Rust.
hyper = { version = "1.4", features = ["server", "http1"] }

# `hyper-util` provides compatibility layers and utilities for hyper 1.0.
hyper-util = { version = "0.1.3", features = ["full"] }

# Provides the `Full` body type needed for hyper 1.0 responses.
http-body-util = "0.1"